chart/outputs/uno/templates/deployment.yaml
---
# Source: uno/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uno
  labels:
    helm.sh/chart: uno-0.1.0
    app.kubernetes.io/name: uno
    app.kubernetes.io/instance: uno
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uno
      app.kubernetes.io/instance: uno
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uno
        app.kubernetes.io/instance: uno
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: uno
          securityContext:
            {}
          image: "uchimera.azurecr.io/hogwarts/uno:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
