chart/outputs/uno/templates/service.yaml
---
# Source: uno/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uno
  labels:
    helm.sh/chart: uno-0.1.0
    app.kubernetes.io/name: uno
    app.kubernetes.io/instance: uno
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uno
    app.kubernetes.io/instance: uno
