chart/outputs/uno/templates/ingress.yaml
---
# Source: uno/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uno
  labels:
    helm.sh/chart: uno-0.1.0
    app.kubernetes.io/name: uno
    app.kubernetes.io/instance: uno
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  tls:
    - hosts:
        - "uno.hogwarts.udev.azure.chimera.cyber.gc.ca"
      secretName: hogwarts-tls
  rules:
    - host: "uno.hogwarts.udev.azure.chimera.cyber.gc.ca"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: uno
                port:
                  number: 80
